changes in web api

--- a/tal_premium/Webapi/Web.config
+++ b/tal_premium/Webapi/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Webapi-20190723043300.mdf;Initial Catalog=aspnet-Webapi-20190723043300;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Webapi-20190312072446.mdf;Initial Catalog=aspnet-Webapi-20190312072446;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DataContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\tz_lockers.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="DataContext" connectionString="Data Source=DESKTOP-MAHQE9J\SQLEXPRESS01;Initial Catalog=db_insurance_tal;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
