--- a/tal_premium/Webapi/Webapi.csproj
+++ b/tal_premium/Webapi/Webapi.csproj
@@ -189,6 +189,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\BaseapiController.cs" />
+    <Compile Include="Controllers\OccupationRatingController.cs" />
+    <Compile Include="Controllers\OccupationController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
