job assignment is ready for reviewing

--- a/tal_premium/Webapi/Web.config
+++ b/tal_premium/Webapi/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Webapi-20190312072446.mdf;Initial Catalog=aspnet-Webapi-20190312072446;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="DataContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\tz_lockers.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="DataContext" connectionString="Data Source=DESKTOP-MAHQE9J\SQLEXPRESS01;Initial Catalog=db_insurance_tal;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DataContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\db_insurance_tal.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
