--- a/tal_premium/Webapi/Webapi.csproj
+++ b/tal_premium/Webapi/Webapi.csproj
@@ -202,6 +202,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\db_insurance_tal.mdf" />
+    <Content Include="App_Data\db_insurance_tal_log.ldf">
+      <DependentUpon>db_insurance_tal.mdf</DependentUpon>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
@@ -212,9 +216,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
